--- a/index.html
+++ b/index.html
@@ -9,5 +9,6 @@
 <script scr="myScript.js"></script>
 <script src="consoleScript.js"></script>
 <script src="alert.js"></script>
+<script src="sandbox.js"></script>
   </body>
 </html>
